--- a/src/engine/opengl/CMakelists.txt
+++ b/src/engine/opengl/CMakelists.txt
@@ -1,15 +1,15 @@
 target_sources(Game PRIVATE
-    indexBuffer.cpp
-    shader.cpp
-    texture.cpp
-    vertexArray.cpp
-    vertexBuffer.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/indexBuffer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/texture.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vertexArray.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vertexBuffer.cpp)
 
 target_sources(Game PRIVATE
-    glwrappers.hpp
-    indexBuffer.hpp
-    shader.hpp
-    texture.hpp
-    vertexArray.hpp
-    vertexBuffer.hpp
-    vertexBufferLayout.hpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/glwrappers.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/indexBuffer.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/shader.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/texture.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vertexArray.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vertexBuffer.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vertexBufferLayout.hpp)
