--- a/src/game/combat/CMakelists.txt
+++ b/src/game/combat/CMakelists.txt
@@ -1,29 +1,11 @@
 target_sources(Game PRIVATE
-<<<<<<< HEAD
-    attack.cpp
-    enemy.cpp
-    grid.cpp
-    player.cpp
-    status.cpp
-    unit.cpp
-    camera.cpp)
-
-target_sources(Game PRIVATE
-    attack.hpp
-    attackEffects.hpp
-    enemy.hpp
-    grid.hpp
-    player.hpp
-    status.hpp
-    unit.hpp
-    camera.hpp)
-=======
     ${CMAKE_CURRENT_SOURCE_DIR}/attack.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/enemy.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/grid.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/player.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/status.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/unit.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/unit.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp)
 
 target_sources(Game PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/attack.hpp
@@ -32,7 +14,7 @@ target_sources(Game PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/grid.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/player.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/status.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/unit.hpp)
->>>>>>> 9a81c511c2697c677aaa28d3bb7f622b33500205
+    ${CMAKE_CURRENT_SOURCE_DIR}/unit.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/camera.hpp)
 
 add_subdirectory(enemies)
